# solana-validator-dao

./: Anchor.toml  package-lock.json  package.json
programs/solana-validator-dao/: Cargo.toml
programs/solana-validator-dao/src/: errors.rs  governance_program.rs  instructions.rs  lib.rs  states.rs
programs/solana-validator-dao/src/processors/: add_registered_provider_to_governance.rs  create_governance_contract.rs  execute_contract.rs  mod.rs  process_stake.rs  register_validator_provider.rs
tests/: register-validator-provider.ts  solana-validator-dao.ts
