[package]
name = "solana-validator-dao"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_validator_dao"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
solana-program = "^1.9.6"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-governance = "2.2.4"
anchor-spl = "0.24.2"
